--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^0.100.2",
+    "normalize.css": "^7.0.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
